--- a/miao/mi/sass/index.scss
+++ b/miao/mi/sass/index.scss
@@ -589,7 +589,6 @@ header {
       position: absolute;
       right: 35px;
       bottom: 25px;
-      z-index: 1;
       label {
         display: inline-block;
         width: 6px;
@@ -1210,5 +1209,74 @@ header {
     margin: 30px auto 0;
     background-image: url(//s01.mifile.cn/i/slogan2016.png);
     background-repeat: no-repeat;
+  }
+}
+
+.right-bar {
+  position: fixed;
+  right: -8px;
+  top: 50%;
+  width: 25px;
+  border: 1px solid #f5f5f5;
+  .right-bar-item {
+    position: relative;
+    height: 39px;
+    text-align: center;
+    background-color: #fff;
+    border-bottom: 1px solid #f5f5f5;
+    a {
+      &:hover {
+        .active {
+          display: inline;
+        }
+        .inactive {
+          display: none;
+        }
+        .des {
+          display: block;
+        }
+      }
+      img {
+        width: 20px;
+        height: 20px;
+        padding: 10px 0;
+        &.active {
+          display: none;
+        }
+      }
+      .des {
+        display: none;
+        position: absolute;
+        top: 6px;
+        right: 40px;
+        width: 80px;
+        padding: 5px 8px;
+        border: 1px solid #f5f5f5;
+        font-size: 12px;
+        border-radius: 2px;
+        color: #757575;
+        background-color: #fff;
+        &.qrcode-des {
+          width: auto;
+          img {
+            width: 100px;
+            height: 100px;
+          }
+        }
+      }
+      .des::after {
+        content: '';
+        position: absolute;
+        top: 3px;
+        right: -6px;
+        width: 12px;
+        height: 28px;
+        background-image: url(//i1.mifile.cn/f/i/2018/home/arrow_gaoqing.png);
+        background-repeat: no-repeat;
+      }
+    }
+  }
+  div.right-bar-item {
+    margin-top: 28px;
   }
 }
